# BLINCAwave

./: .env  mkdocs.yml  pyproject.toml  setup4developers.txt
docs/: contributing.md  index.md  installation.md  requirements.txt
docs/api/: blwave_simulation.md  forcing.md  index.md  main_run.md  nonlinear.md  plotting.md  vel_base.md  zdiff.md
docs/examples/: 01_wave_forced_bl.md  02_capping_inversion.md  03_energy_budgets.md
docs/theory/: equations.md  numerics.md  overview.md
src/blincawave/: blwave_simulation.py  nonlinear.py  plotting.py
tests/NonlinearEffects/: Non_lin_compare.py
